# Lab1

./: db.sqlite3  pyproject.toml
cinema/: admin.py  forms.py  models.py  urls.py  views.py
cinema/migrations/: 0001_initial.py  0002_remove_movie_created_date_remove_movie_updated_date.py
main/: settings.py  urls.py
templates/: add.html  detail.html  movie_list.html
