[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["hydroxygenium <orenvady@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
Pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
